First batch of fixes in light of reviewers suggestions.

--- a/cog-paper.tex
+++ b/cog-paper.tex
@@ -85,13 +85,13 @@ Holistic search-based approaches such as Monte Carlo Tree Search (MCTS) \cite{br
 % Antonio - add a reference to this asseveration, if possible
 at the expense of sacrificing tactical performance due to the coarser actions considered.
 
-In this paper, we propose an approach to enhance the performance and scalability of search-based techniques, particularly MCTS-based, by pruning unnecessary and detrimental player-actions from the decision space of an RTS game. 
+In this paper, we propose an approach to increase the performance and scalability of search-based techniques, particularly MCTS-based, by pruning unnecessary and detrimental player-actions from the decision space of an RTS game. 
 % Antonio - To be applied by an autonomous agent (as a part of its AI engine)
 We inspect the low-level structure of the search space and identify detrimental player-actions. Next, we apply multiple hard-pruning approaches to remove those player-actions during the search. The goal is to reduce the branching factor and explore more promising player-actions. Our approach focuses on pruning a class of player-actions we identify as Inactive Player-Actions (IPAs) 
 % Antonio - You should justify why have you chosen IPAs instead of any other possible action
 and is applied in two MCTS approaches: UCT (Upper Confidence bounds for Trees)
 % Antonio - you haven't mentioned UCT before. I have done it. ;)
- and NaïveMCTS. IPAs tend to keep at least one unit in an inactive state, which could be  problematic. The experimentation results using \mRTS{} show an important performance gain relative to the map's size.
+ and NaïveMCTS. IPAs tend to keep at least one unit in an inactive state, which could be  problematic. The experimentation results using \mRTS{} show a considerable performance gain relative to the map's size.
 
 The rest of this paper is organized as follows: Section \ref{sec:background} reviews some background information about RTS games, \mRTS{} and MCTS. Section \ref{sec:state_of_the_art} presents the related state of the art and Section \ref{sec:proposed_method} describes IPAs and the proposed move pruning approaches. Experimental results are presented and discussed in Section \ref{sec:experiments}, and Section \ref{sec:conclusions} concludes the paper with some conclusions and future perspectives.
 
@@ -104,11 +104,13 @@ The rest of this paper is organized as follows: Section \ref{sec:background} rev
 
 A sub-genre of strategy video games, real-time strategy games commonly simulate a warfare situation where each side of the game is given control over a military base and is tasked with collecting resources and recruiting troops.
 % Antonio - There are RTS with other features, so I would add 'commonly'
- To emerge victorious, the player must fully destroy his opponent's forces. RTS games progress in real-time, meaning that the players may act simultaneously under a very short decision cycle and that the effect of executing an action is not necessarily immediate. Usually, an RTS game is played from a top-down perspective over a large grid-based map, covered by a fog-of-war layer reducing observability and increasing the game's difficulty and complexity. Moreover, the execution of a unit-action can be influenced by some stochastic parameters,
+ To emerge victorious, the player must fully destroy his opponent's forces. RTS games progress in real-time, signifying that players may act simultaneously under a very short decision cycle, and the effect of executing an action is not necessarily immediate. Usually, an RTS game is played from a top-down perspective over a large grid-based map, covered by a fog-of-war layer reducing observability and increasing the game's difficulty and complexity. Moreover, the execution of a unit-action can be influenced by some stochastic parameters,
 % Antonio - could you clarify this? What stochastic parameters do you refer to? ;)
- introducing non-determinism to the mix. Players control their units by issuing unit-actions to each. The combination of unit-actions issued simultaneously at a given game cycle is known as a player-action.
+ introducing non-determinism to the mix. Players control their units by issuing unit-actions to each. A player-action is the combination of unit-actions issued simultaneously at an arbitrary game cycle.
+ 
+% The combination of unit-actions issued simultaneously at a given game cycle is known as a player-action.
 
-A typical RTS game is defined as a zero-sum, multi-player, non-deterministic game with imperfect information. The size of an RTS state space and branching factor, as estimated in a typical \textsc{StarCraft} setting \cite{ontanon_survey_2013}, reaches $10^{1685}$ possible states and $10^{50}$ possible actions at a decision point. In contrast, Chess and Go possess a state-space estimate of $10^{47}$ and $10^{171}$, respectively, with an average branching factor equalling $36$ in Chess and $180$ in Go. These estimates are a clear indicator of the difficulty faced by a game-playing AI in the RTS domain, justifying the growing research interest in this area.
+A typical RTS game is defined as a zero-sum, multi-player, non-deterministic game with imperfect information. The size of an RTS state space and branching factor, as estimated in a typical \textsc{StarCraft} setting \cite{ontanon_survey_2013}, reaches $10^{1685}$ possible states and $10^{50}$ possible actions at a decision point. In contrast, Chess and Go possess a state-space estimate of $10^{47}$ and $10^{171}$, respectively, with an average branching factor equaling $36$ in Chess and $180$ in Go. Such proportions predict a more difficult task for an RTS game-playing AI.
 
 Based on the terminology and definitions presented in \cite{ontanon_combinatorial_2017}, an RTS game can be defined formally as a tuple $G$, where $G = (S, A, P, \tau, L, W, s_{init})$ and:
 
@@ -126,7 +128,7 @@ Based on the terminology and definitions presented in \cite{ontanon_combinatoria
 
 \subsection{\mRTS{}}
 
-Conducting AI research on commercial RTS games can be a daunting experience since most games do not offer a suitable API for this purpose. To mitigate this shortcoming several independent solutions were developed, such as ORTS, the \textsc{WarCraft} port, Wargus, and the unofficial \textsc{StarCraft} interface, BWAPI. Much later, an official API and toolset for \textsc{StarCraft II} were made available in a collaborative effort between Blizzard and DeepMind \cite{vinyals_starcraft_2017-1}. Additionally, several independent platforms have emerged, such as \mRTS{} \cite{ontanon_combinatorial_2013}, ELF \cite{tian_elf_2017} and DeepRTS \cite{andersen_deep_2018}.
+Conducting AI research on commercial RTS games can be a daunting experience since most games do not offer a suitable API for this purpose. To mitigate this shortcoming several independent solutions were developed, such as ORTS, the \textsc{WarCraft} port, Wargus, and the unofficial \textsc{StarCraft} interface, BWAPI. Much later, an official API and toolset for \textsc{StarCraft II} were made available in a collaborative effort between Blizzard and DeepMind \cite{vinyals_starcraft_2017-1}. Additionally, several independent platforms have emerged, such as \mRTS{} \cite{ontanon_combinatorial_2013}, ELF \cite{tian_elf:_2017} and DeepRTS \cite{andersen_deep_2018}.
 
 In this paper, we use \mRTS{} as an experimentation test-bed. It is a stripped-down RTS game simulator designed for AI research, which features all the challenging aspects of an RTS game in a minimalistic form. It also includes an efficient forward model, required for implementing simulation-based search approaches. Figure \ref{mRTSScreenshot} shows a screen capture of a \mRTS{} match. Each player controls 2 types of structures (Base and Barracks) and 4 types of mobile units (Worker, Light, Ranged, and Heavy). The Base produces Worker units, and the Barracks produce assault units, in exchange for resources. Worker units can harvest resources from resource deposits and store them in the Base. The game map is an arbitrary-sized 2D grid where each square is either free or occupied by a unit, a structure, or an environment unit (resource deposit or wall).
 
@@ -135,7 +137,7 @@ In this paper, we use \mRTS{} as an experimentation test-bed. It is a stripped-d
 \begin{figure}[t]
 \begin{center}
 	\includegraphics[scale=1]{figs/mRTS.png}
-	\caption{A \mRTS{} match. The players' units can be differentiated by the color of their outline. Blue is for Player 1, and red is for Player 2. The numbers displayed over certain units indicate the amount of resources held by that unit. }
+	\caption{A \mRTS{} match. A player's units can be distinguished by their outline's color. The digits displayed over certain units represent the number of resources held by that unit.}
 	\label{mRTSScreenshot}
 \end{center}
 \end{figure}
@@ -169,15 +171,15 @@ The most visited decision is usually the one returned. Given enough computation 
 
 Dealing with the enormous RTS decision space in the context of MCTS is an open problem continuously receiving contributions. By treating the selection phase as a CMAB, NaïveMCTS effectively adapts MCTS to combinatorial search spaces. Nevertheless, the decision space remains the same, and the algorithm still suffers from high dimensionality. Downsizing the search space's dimensionality is usually done through action abstraction or machine learning.
 
-Abstracting the search space through expert-authored scripts is an effective way to considerably reduce the branching factor. Instead of searching in the low-level player-actions space, Justesen et al \cite{justesen_script-_2014} adapted UCT to search in the space of player-actions suggested by scripts. NaïveMCTS was similarly adapted by Moraes et al \cite{moraes_action_2018} using the concept of asymmetric abstraction \cite{moraes_asymmetric_2018}, enabling multi-script and multi-level search. Puppet Search \cite{barriga_puppet_2015} employs UCT to search in the space of choice points inserted into scripts. Guided NaïveMCTS (GNS) \cite{yang_guiding_2019} uses scripts to bias the selection phase towards considering scripted actions first. Several other search algorithms were also used in conjunction with action abstraction, such as local search in Portfolio Greedy Search (PGS) \cite{churchill_portfolio_2013} and minimax in AHTN \cite{ontanon_adversarial_2015}.
+Abstracting the search space through expert-authored scripts is an effective way to considerably reduce the branching factor. Instead of searching in the low-level player-actions space, Justesen et al \cite{justesen_script-_2014} adapted UCT to search in the space of player-actions suggested by scripts. NaïveMCTS was similarly adapted by Moraes et al \cite{moraes_action_2018} using asymmetric abstractions \cite{moraes_asymmetric_2018} to search in multiple levels of abstraction. Puppet Search \cite{barriga_puppet_2015} employs UCT to search in the space of choice points inserted into scripts. Guided NaïveMCTS (GNS) \cite{yang_guiding_2019} biases the selection phase towards considering scripted actions first. Other search algorithms were also combined with action abstraction, such as local search in Portfolio Greedy Search (PGS) \cite{churchill_portfolio_2013} and minimax in AHTN \cite{ontanon_adversarial_2015}.
 
-Machine learning can be employed to guide node selection using a tree policy learned from expert traces. AlphaGo \cite{silver_mastering_2016} employs a CNN-based policy network, trained from a large dataset of expert Go replays. Ontañón informed node selection using a learned Bayesian model in InformedMCTS. Yang and Ontañón \cite{yang_extracting_2019} later demonstrated the effectiveness of the C4.5 classifier for such tasks, due to its speed and accuracy.
+Machine learning can be used to guide node selection by learning a tree policy from expert traces. AlphaGo \cite{silver_mastering_2016} employed a CNN-based policy network, trained from a large database of expert Go replays, and improved via a reinforcement learning phase. Later work on AlphaZero fully discarded expert knowledge. Ontañón informed node selection using a learned Bayesian model in InformedMCTS. Yang and Ontañón \cite{yang_extracting_2019} later demonstrated the effectiveness of the C4.5 classifier for such tasks, due to its speed and accuracy.
 
 %\subsection{Move Pruning}
 
 If we adjust our perspective, all the aforementioned approaches can be regarded as move pruning approaches \cite{yang_integrating_2020}. By focusing on a set of promising expert-based player-actions, these approaches effectively prune the search space of all the remaining player-actions, significantly reducing the branching factor. Such a practice can also become unsafe and prone to exploitation, due to the coarser player-actions considered, resulting in a loss of tactical performance. To address this issue, several approaches combining low- and high-level search have emerged, such as \cite{barriga_combining_2017}, \cite{neufeld_hybrid_2019} and \cite{moraes_action_2018}.
 
-Directly pruning the player-actions responsible for weak playing strength can be an alternative approach towards focusing the search on promising actions, without compromising tactical strength. In the context of Chess \cite{heinz_adaptive_1999} and Shogi \cite{hoki_efficiency_2012}, several forward pruning methods such as Null-move pruning and futility pruning were utilized to reduce the branching factor and enhance $\alpha\beta$ search. In Go, a domain-dependent pruning approach was implemented in UCT \cite{huang_pruning_2010-1}, exploiting territory information. Similar MCTS improvements were applied in Hex \cite{arneson_monte_2010-1}, Havannah, \cite{dugueperoux_pruning_2016} and DeadEnd \cite{he_game_2008-1}. In video-games, Sephton et al \cite{sephton_heuristic_2014} also enhanced MCTS by applying a knowledge-based move pruning approach for the strategic card game, Lords of War.
+Directly pruning the player-actions responsible for weak playing strength can be an alternative approach towards focusing the search on promising actions, without compromising tactical strength. In the context of Chess \cite{heinz_adaptive_1999} and Shogi \cite{hoki_efficiency_2012}, several forward pruning methods such as Null-move pruning and futility pruning were utilized to reduce the branching factor and enhance $\alpha\beta$ search. In Go, a domain-dependent pruning approach was implemented in UCT \cite{huang_pruning_2010-1}, exploiting territory information. Similar MCTS improvements were applied in Hex \cite{arneson_monte_2010}, Havannah, \cite{dugueperoux_pruning_2016} and DeadEnd \cite{he_game_2008-1}. In video-games, Sephton et al \cite{sephton_heuristic_2014} also enhanced MCTS by applying a knowledge-based move pruning approach for the strategic card game, Lords of War.
 
 In this paper, we propose a domain-dependent hard-pruning approach for MCTS agents in RTS games, targeting a specific type of player-actions.
 
@@ -189,7 +191,7 @@ In this paper, we propose a domain-dependent hard-pruning approach for MCTS agen
 
 We propose to act directly on the decision space and hard-prune a portion of decisions we deem irrelevant and/or detrimental to the performance of MCTS. By doing so, MCTS will be freed from sampling those decisions and simulating their outcomes, and the computation budget gained will be utilized to focus on, hopefully, more relevant and significant decisions. Consequentially, the playing strength and scalability of MCTS should be improved.
 
-As a first attempt, we chose to focus on player-actions having the highest chance of misleading search, and negatively impacting the playing strength. Out of these player-actions, we believe Inactive Player-Actions (IPAs) naturally come first. Thus, we implemented several pruning approaches that keep a predefined amount (fixed or relative) of those player-actions and prune the remaining. We will briefly discuss the structure of RTS player-actions in the next section and then define IPAs.
+As a first attempt, we chose to focus on player-actions having the highest chance of misleading search and negatively impacting the playing strength. Out of these player-actions, we believe Inactive Player-Actions (IPAs) naturally come first. Thus, we implemented several pruning approaches that keep a predefined number (fixed or relative) of those player-actions and prune the remaining. We will briefly discuss the structure of RTS player-actions in the next section and then define IPAs.
 
 % ===========================================
 
@@ -257,15 +259,15 @@ The radical pruning approach would be to remove all IPAs from the search space, 
 \begin{figure*}[!h]
 \begin{center}
 	\includegraphics[width=1\textwidth]{figs/PT-h.pdf}
-	\caption{Results of the pruning analysis experiments. Each data point represents $500$ matches between the basic MCTS agent and the one augmented with IPA pruning. In each plot, the vertical axis represents the score obtained by the IPA pruning MCTS agent, against the base MCTS agent. The score is calculated as such : $score = ((Wins + (Draws / 2)) / 500) \times 100$. A match is considered a draw if no winner has been decided after $3000$, $3500$ and $4000$ cycles in each map of size $8\times8$, $12\times12$ and $16\times16$ respectively.}
+	\caption{Results of the pruning analysis experiments. Each data point represents $500$ matches between the basic MCTS agent and the one augmented with IPA pruning. In each plot, the vertical axis represents the score obtained by the IPA pruning MCTS agent, against the base MCTS agent. The score is calculated as such: $score = ((Wins + (Draws / 2)) / 500) \times 100$. A match is considered a draw if no winner has been decided after $3000$, $3500$ and $4000$ cycles in each map of size $8\times8$, $12\times12$ and $16\times16$ respectively.}
 	\label{PruningAnalysis}
 \end{center}
 \end{figure*}
 
-Detecting trapped units is a straightforward process. But dealing with tactical waiting can be elusive since there is no simple way to differentiate between waiting as a tactical choice, and waiting as a bad decision until witnessing the consequences. Random playouts do not offer an accurate answer about the quality of the decision. We propose four pruning approaches that capture IPAs and decide whether to allow or prune them according to a given parameter. These approaches preserve all IPAs involving trapped units and allow a predetermined amount of random IPAs in hopes of preserving tactical waiting situations. The remaining IPAs are all considered disadvantageous and are systematically hard-pruned. We do not re-insert pruned IPAs because we consider the preserved player-actions more interesting to explore. We describe our pruning approaches as follows:
+Detecting trapped units is a straightforward process. But dealing with tactical waiting can be elusive since there is no simple way to differentiate between waiting as a tactical choice, and waiting as a bad decision until witnessing the consequences. Random playouts do not offer an accurate answer about the quality of the decision. We propose four pruning approaches that capture IPAs and decide whether to allow or prune them according to a given parameter. These approaches preserve all IPAs involving trapped units and allow a predetermined number of random IPAs in hopes of preserving tactical waiting situations. The remaining IPAs are all considered disadvantageous and are systematically hard-pruned. We do not re-insert pruned IPAs because we consider the preserved player-actions more interesting to explore. We describe our pruning approaches as follows:
 
 \begin{itemize}
-\item \textbf{Random Inactivity Pruning - Fixed (RIP-F($k$)):} Allow a fixed amount, $k$, of IPAs.
+\item \textbf{Random Inactivity Pruning - Fixed (RIP-F($k$)):} Allow a fixed number, $k$, of IPAs.
 \item \textbf{Random Inactivity Pruning - Relative (RIP-R($p$)):} Allow a percentage of IPAs, $p$, relative to the total number of removable IPAs.
 \item \textbf{Dynamic RIP-F (DRIP-F($k_1$, $k_2$)):} Allow $k_1$ IPAs when the units count outnumber the opponent's units count, and $k_2$ IPAs in the opposite situation.
 \item \textbf{Dynamic RIP-R (DRIP-R($p_1$, $p_2$)):} Allow $p_1$ percent of IPAs when the units count outnumber the opponent's units count, and $p_2$ percent of IPAs in the opposite situation.
