--- a/library.bib
+++ b/library.bib
@@ -6106,6 +6106,22 @@ end, we recreate DeepMind's FullyConv Agent with slightly better results.},
   language = {en}
 }
 
+@article{silver_general_2018,
+  title = {A General Reinforcement Learning Algorithm That Masters Chess, Shogi, and {{Go}} through Self-Play},
+  author = {Silver, David and Hubert, Thomas and Schrittwieser, Julian and Antonoglou, Ioannis and Lai, Matthew and Guez, Arthur and Lanctot, Marc and Sifre, Laurent and Kumaran, Dharshan and Graepel, Thore and Lillicrap, Timothy and Simonyan, Karen and Hassabis, Demis},
+  year = {2018},
+  month = dec,
+  volume = {362},
+  pages = {1140--1144},
+  issn = {0036-8075, 1095-9203},
+  doi = {10.1126/science.aar6404},
+  abstract = {The game of chess is the longest-studied domain in the history of artificial intelligence. The strongest programs are based on a combination of sophisticated search techniques, domain-specific adaptations, and handcrafted evaluation functions that have been refined by human experts over several decades. By contrast, the AlphaGo Zero program recently achieved superhuman performance in the game of Go by reinforcement learning from self-play. In this paper, we generalize this approach into a single AlphaZero algorithm that can achieve superhuman performance in many challenging games. Starting from random play and given no domain knowledge except the game rules, AlphaZero convincingly defeated a world champion program in the games of chess and shogi (Japanese chess), as well as Go.},
+  file = {C\:\\Users\\aesou\\Zotero\\storage\\UWYBWZ6S\\science_alphazero_december_2018.pdf;F\:\\Direct Downloads\\science_alphazero_december_2018.pdf},
+  journal = {Science},
+  language = {en},
+  number = {6419}
+}
+
 @article{silver_mastering_2016,
   title = {Mastering the Game of {{Go}} with Deep Neural Networks and Tree Search},
   author = {Silver, David and Huang, Aja and Maddison, Chris J. and Guez, Arthur and Sifre, Laurent and {van den Driessche}, George and Schrittwieser, Julian and Antonoglou, Ioannis and Panneershelvam, Veda and Lanctot, Marc and Dieleman, Sander and Grewe, Dominik and Nham, John and Kalchbrenner, Nal and Sutskever, Ilya and Lillicrap, Timothy and Leach, Madeleine and Kavukcuoglu, Koray and Graepel, Thore and Hassabis, Demis},
