--- a/cog-paper.tex
+++ b/cog-paper.tex
@@ -3,7 +3,6 @@
 
 \usepackage{cite}
 \usepackage{amsmath,amssymb,amsfonts}
-%\usepackage{algorithmic}
 \usepackage{graphicx}
 \usepackage{textcomp}
 \usepackage{xcolor}
@@ -20,9 +19,20 @@
 % A shortcut for µRTS
 \newcommand{\mRTS}{$\mu$RTS}
 
+% Commands to squeeze space, recover extra space.
+\newcommand{\squeezeup}{\vspace{-2.0mm}}
+\setlength{\textfloatsep}{1\baselineskip plus 0.2\baselineskip minus 0.5\baselineskip}
+%\setlength{\textfloatsep}{2pt}
+
+% For algorithms
+\makeatletter
+\newcommand{\removelatexerror}{\let\@latex@error\@gobble}
+\makeatother
+
 \begin{document}
 
-\title{Enhancing MCTS Performance in Real-Time Strategy Games Through Move Pruning\\
+\title{Improving the Performance of MCTS-Based \mRTS{} Agents Through Move Pruning\\
+
 \thanks{This work has been supported in part by projects B-TIC-402-UGR18 (FEDER and Junta de Andaluc\'{i}a), RTI2018-102002-A-I00 (Ministerio Espa\~{n}ol de Ciencia, Innovaci\'{o}n y Universidades), projects TIN2017-85727-C4-{1-2}-P (Ministerio Espa\~{n}ol de Econom\'{i}a y Competitividad), and TEC2015-68752 (also funded by FEDER).}
 }
 % Antonio - add here your grants also
@@ -88,7 +98,7 @@ Holistic search-based approaches such as Monte Carlo Tree Search (MCTS) \cite{br
 % Antonio - add a reference to this asseveration, if possible
 at the expense of sacrificing tactical performance due to the coarser actions considered.
 
-We propose an approach to increase the performance and scalability of search-based techniques, particularly MCTS-based, by pruning unnecessary and detrimental player-actions from the decision space of an RTS game. 
+We propose an approach to increase the performance and scalability of search-based techniques, particularly MCTS-based, by pruning unnecessary and detrimental player-actions from the decision space of an RTS game, specifically \mRTS{}.
 % Antonio - To be applied by an autonomous agent (as a part of its AI engine)
 We inspect the low-level structure of the search space and identify detrimental player-actions through domain knowledge. Next, we apply multiple hard-pruning approaches to remove those player-actions during the search. The goal is to reduce the branching factor and explore more promising player-actions. Our approach targets a class of player-actions we identify as Inactive Player-Actions (IPAs) because they tend to keep at least one unit in an inactive state, which can be problematic. The experiments' results using UCT (Upper Confidence bounds for Trees) and NaïveMCTS in \mRTS{} show a considerable performance gain relative to the map's size.
 
@@ -113,9 +123,7 @@ A sub-genre of strategy video games, real-time strategy games usually simulate a
  
 % The combination of unit-actions issued simultaneously at a given game cycle is known as a player-action.
 
-A typical RTS game is defined as a zero-sum, multi-player, non-deterministic game with imperfect information. The size of an RTS state space and branching factor, as estimated in a typical \textsc{StarCraft} setting \cite{ontanon_survey_2013}, reaches $10^{1685}$ possible states and $10^{50}$ possible actions at a decision point. In contrast, Chess and Go possess a state-space estimate of $10^{47}$ and $10^{171}$, respectively, with an average branching factor equaling $36$ in Chess and $180$ in Go. Such proportions predict a difficult task for an RTS game-playing AI.
-
-Based on the terminology and definitions presented in \cite{ontanon_combinatorial_2017}, an RTS game can be defined formally as a tuple $G$, where $G = (S, A, P, \tau, L, W, s_{init})$ and:
+A typical RTS game is defined as a zero-sum, multi-player, non-deterministic game with imperfect information. The size of an RTS state space and branching factor, as estimated in a typical \textsc{StarCraft} setting \cite{ontanon_survey_2013}, reaches $10^{1685}$ possible states and $10^{50}$ possible actions at a decision point. In contrast, Chess and Go possess a state-space estimate of $10^{47}$ and $10^{171}$, respectively, with an average branching factor equaling $36$ in Chess and $180$ in Go. Such proportions predict a difficult task for an RTS game-playing AI. Based on the terminology and definitions presented in \cite{ontanon_combinatorial_2017}, an RTS game can be defined as a tuple $G$, where $G = (S, A, P, \tau, L, W, s_{init})$ and:
 
 \begin{itemize}
 \item $S$ : The set of all possible states (state space).
@@ -140,12 +148,16 @@ In this paper, we use \mRTS{} as an experimentation test-bed. It is a stripped-d
 \begin{figure}[t]
 \begin{center}
 	\includegraphics[scale=1]{figs/mRTS.png}
-	\caption{A \mRTS{} match. A player's units can be distinguished by their outline's color. The digits displayed over certain units represent the number of resources held by that unit.}
+	\caption{A \mRTS{} match. A player's units can be distinguished by their outline's color. The number of resources held by a unit is displayed on it.}
 	\label{mRTSScreenshot}
 \end{center}
+\squeezeup
+\squeezeup
 \end{figure}
 
-\mRTS{} represents an interesting research domain for online planning techniques, especially those requiring a forward-model. Several low-level, high-level, and multi-level planning approaches were proposed in \mRTS{} as detailed in \cite{ouessai_online_2019}.
+Since 2017, a \mRTS{} AI competition is held as part of the IEEE Conference on Games (CoG, formerly CIG) \cite{ontanon_first_2018}. The competing agents participate in a round-robin tournament, in at least one of the three tracks: full-observability, partial-observability, and non-determinism (dropped in the 2020 edition). Our proposed approach can be useful in any track.
+
+%\mRTS{} represents an interesting research domain for online planning techniques, especially those requiring a forward-model. Several low-level, high-level, and multi-level planning approaches were proposed in \mRTS{} as detailed in \cite{ouessai_online_2019}.
 
 % ===========================================
 
@@ -174,7 +186,7 @@ The most visited decision is usually the one returned. Given enough computation 
 
 Dealing with the enormous RTS decision space in the context of MCTS is an open problem continuously receiving contributions. By treating the selection phase as a CMAB, NaïveMCTS effectively adapts MCTS to combinatorial search spaces. Nevertheless, the decision space remains the same, and the algorithm still suffers from high dimensionality. Downsizing the search space's dimensionality is usually done through action abstraction or machine learning.
 
-Abstracting the search space through expert-authored scripts is an effective way to considerably reduce the branching factor. Instead of searching in the low-level player-actions space, Justesen et al \cite{justesen_script-_2014} adapted UCT to search in the space of player-actions suggested by scripts. NaïveMCTS was similarly adapted by Moraes et al \cite{moraes_action_2018} using asymmetric abstractions \cite{moraes_asymmetric_2018} to search in multiple levels of abstraction. Puppet Search \cite{barriga_puppet_2015} employs UCT to search in the space of choice points inserted into scripts. Guided NaïveMCTS (GNS) \cite{yang_guiding_2019} biases the selection phase towards considering scripted actions first. Other search algorithms were also combined with action abstraction, such as local search in Portfolio Greedy Search (PGS) \cite{churchill_portfolio_2013} and minimax in AHTN \cite{ontanon_adversarial_2015}.
+Abstracting the search space through expert-authored scripts is an effective way to considerably reduce the branching factor. Instead of searching in the low-level player-actions space, Justesen et al \cite{justesen_script-_2014} adapted UCT to search in the space of player-actions suggested by scripts. NaïveMCTS was similarly adapted by Moraes et al \cite{moraes_action_2018} using asymmetric abstractions \cite{moraes_asymmetric_2018} to search in multiple levels of abstraction. Puppet Search \cite{barriga_puppet_2015} uses UCT to search in the space of choice points inserted in scripts. Guided NaïveMCTS (GNS) \cite{yang_guiding_2019} biases the selection phase to consider scripted actions first. Other search algorithms were also combined with action abstraction, such as local search in Portfolio Greedy Search (PGS) \cite{churchill_portfolio_2013} and minimax in Adversarial Hierarchical Task Networks (AHTN) \cite{ontanon_adversarial_2015}.
 
 Machine learning can be used to guide node selection by learning a tree policy from expert traces. AlphaGo \cite{silver_mastering_2016} employed a CNN-based policy network, trained from a large database of expert Go replays, and improved via a reinforcement learning phase. Later work on AlphaZero \cite{silver_general_2018} fully discarded expert knowledge. Ontañón informed node selection using a learned Bayesian model in InformedMCTS \cite{ontanon_informed_2016}. Yang and Ontañón \cite{yang_extracting_2019} later demonstrated the effectiveness of the C4.5 classifier for such tasks, due to its speed and accuracy.
 
@@ -262,9 +274,10 @@ The radical pruning approach would be to remove all IPAs from the search space, 
 \begin{figure*}[!h]
 \begin{center}
 	\includegraphics[width=1\textwidth]{figs/PT-h.pdf}
-	\caption{Results of the pruning analysis experiments. Each data point represents $500$ matches between the basic MCTS agent and the one augmented with IPA pruning. The vertical axes represent the score obtained by the IPA pruning MCTS agent against the same non-pruning MCTS agent. The score is calculated as such: $score = ((Wins + (Draws / 2)) / 500) \times 100$. A match is considered a draw if no winner has been decided after $3000$, $3500$, and $4000$ cycles in each map of size $8\times8$, $12\times12$, and $16\times16$, respectively.}
+	\caption{Results of the pruning analysis experiments. Each data point represents $500$ matches between a basic MCTS agent and the same agent enhanced with IPA pruning. The vertical axes represent the score obtained by the latter agent. The score is calculated as such: $score = ((Wins + (Draws / 2)) / 500) \times 100$. A match is considered a draw if no winner has been decided after $3000$, $3500$, and $4000$ cycles in each map of size $8\times8$, $12\times12$, and $16\times16$, respectively.}
 	\label{PruningAnalysis}
 \end{center}
+\squeezeup 
 \end{figure*}
 
 Detecting trapped units is a simple task. But dealing with tactical waiting can be elusive since there is no simple way to differentiate between waiting as a tactical choice, and waiting as a bad decision until witnessing the consequences. Random playouts do not offer a reliable answer in that regard. We propose four pruning approaches that capture IPAs and decide whether to allow or prune them according to a given parameter. These approaches preserve all IPAs involving trapped units and allow a predetermined number/rate of random IPAs in hopes of preserving tactical waiting situations. The remaining IPAs are all considered disadvantageous and are systematically hard-pruned. We do not re-insert pruned IPAs because we consider the non-pruned player-actions more urgent to explore. The pruning approaches are described as follows:
@@ -284,14 +297,38 @@ These approaches can be easily implemented as part of any search algorithm, as s
 
 %In the next section, we report the experiments conducted and the results obtained by enhancing UCT and NaïveMCTS with these pruning approaches in the context of RTS games.
 
-\begin{center}
-\scalebox{0.9}{ 
-\begin{minipage}{1\linewidth}
+%\begin{center}
+%\scalebox{0.9}{ 
+%\begin{minipage}{1\linewidth}
+%\begin{algorithm}[H]
+%\label{pruningAlgorithm}
+%\caption{The general IPA pruning algorithm.}
+%\begin{algorithmic}[1]
+%\Function{Prune}{$a$} \Comment{$a:$ A sampled player-action}
+%	\If{ \textsc{isIPA($a$)}}
+%		\If{\textsc{TrappedUnit($a$)}} \textbf{return} $a$ \EndIf
+%		\If{$a\in$ \textit{prunedIPAs} \textbf{or} \textsc{CheckParam()}}
+%			\While{\textsc{isIPA($a$)}}
+%				\State \textit{prunedIPAs.addIfNotExist}($a$)
+%				\State $a\gets$ \textsc{SampleAction}(gameState)
+%			\EndWhile
+%		\EndIf
+%	\EndIf
+%	\State \textbf{return} $a$
+%\EndFunction
+%\end{algorithmic}
+%\end{algorithm}
+%\end{minipage}}
+%\end{center}
+
+
+%\scalebox{0.9}{ 
+\begin{figure}
 \begin{algorithm}[H]
 \label{pruningAlgorithm}
 \caption{The general IPA pruning algorithm.}
 \begin{algorithmic}[1]
-\Function{Prune}{$a$} \Comment{$a:$ sampled player-action}
+\Function{Prune}{$a$} \Comment{$a:$ A sampled player-action}
 	\If{ \textsc{isIPA($a$)}}
 		\If{\textsc{TrappedUnit($a$)}} \textbf{return} $a$ \EndIf
 		\If{$a\in$ \textit{prunedIPAs} \textbf{or} \textsc{CheckParam()}}
@@ -305,8 +342,8 @@ These approaches can be easily implemented as part of any search algorithm, as s
 \EndFunction
 \end{algorithmic}
 \end{algorithm}
-\end{minipage}}
-\end{center}
+\squeezeup
+\end{figure}%}
 
 
 % --------------------------------------- EXPERIMENTATION AND RESULTS ------------------------------------------
@@ -323,7 +360,7 @@ These approaches can be easily implemented as part of any search algorithm, as s
 %\end{center}
 %\end{figure*}
 
-To study the effect of pruning IPAs on MCTS, we implemented the four aforementioned pruning techniques in UCT and NaïveMCTS and conducted various experiments in \mRTS{}. Indeed, UCT's performance suffers greatly in RTS scenarios due to UCB1's limitations in combinatorial search spaces \cite{ontanon_combinatorial_2017}, nevertheless we wanted to test if pruning IPAs would alleviate the dimensionality burden and results in performance improvement. Integrating IPA pruning into UCT and NaïveMCTS generated new agents that we refer to by suffixing the acronym of the technique to that of the original search approach. For instance, the agent using RIP-R with UCT or NaïveMCTS is noted as UCT-RIP-R($p$) or NMCTS-RIP-R($p$).
+To study the effect of pruning IPAs on MCTS, we implemented the four aforementioned pruning techniques in UCT and NaïveMCTS and conducted various experiments in \mRTS{}. Indeed, UCT's performance suffers greatly in RTS scenarios due to UCB1's limitations in combinatorial search spaces \cite{ontanon_combinatorial_2017}, nevertheless we wanted to test if pruning IPAs would alleviate the dimensionality burden and results in performance improvement. Integrating IPA pruning in UCT and NaïveMCTS generated new agents that we refer to by suffixing the acronym of the technique to that of the original search approach. For instance, the agent using RIP-R with UCT or NaïveMCTS is noted as UCT-RIP-R($p$) or NMCTS-RIP-R($p$).
 
 We first analyzed the performance of RIP-F and RIP-R relative to the number of IPAs allowed, the map's size, and the MCTS algorithm in use. We then took the top-performing pruning approaches for each MCTS algorithm and map size and performed a round-robin tournament with other \mRTS{} agents. Afterward, we examined the impact on the branching factor and performed a scalability test in larger maps. The experiments were carried out on two PCs with Intel Core i5 and i7 CPUs, clocked at 3.1Ghz and 3.4Ghz, respectively, using the latest version of \mRTS{} at the time of writing.
 
@@ -379,7 +416,7 @@ For UCT, dynamic approaches work best in the small and medium-sized maps due to 
 
 \subsection{Performance Analysis}
 
-To further assess the performance impact of IPA pruning on MCTS agents, we have run a round-robin tournament between 8 \mRTS{} agents, including two IPA pruning MCTS agents. The tournament consists of 100 iterations, where in each iteration, every agent plays a match against the other agents resulting in $8\times7\times100 = 5600$ matches in each of the maps used previously. The participating \mRTS{} agents include four baseline agents and one top performing agent from 2019's \mRTS{} competition, MixedBot: % Antonio - I guess MixedBot is the top performing agent.:D
+To further assess the performance impact of IPA pruning on MCTS agents, we have run a round-robin tournament between $8$ \mRTS{} agents, including two IPA pruning MCTS agents, under \mRTS{} competition conditions. The tournament consists of $100$ iterations, where in each iteration, every agent plays a match against the other agents resulting in $8\times7\times100 = 5600$ matches in each of the maps used previously. The participating \mRTS{} agents include four baseline agents and one top performing agent from 2019's \mRTS{} competition, MixedBot: % Antonio - I guess MixedBot is the top performing agent.:D
 
 \begin{itemize}
 \item \textit{NaïveMCTS:} The original unmodified NaïveMCTS.
@@ -425,6 +462,7 @@ MixedBot     & $\bm{74.8}$ & $\bm{86.8}$ & $\bm{89.6}$ & $\bm{99}$ & $\bm{100}$ 
 	\caption{The tournament results in each of the three map sizes. The vertical axis represents the obtained score against all agents.}
 	\label{TournamentResultsAllMaps}
 \end{center}
+\squeezeup
 \end{figure}
 
 % Branching factor analysis results - floating table. ---------------------------
@@ -455,6 +493,8 @@ Agent & Map & \begin{tabular}[c]{@{}c@{}}Avg. Branching \\Factor, $b$ (Incl IPAs
 The results demonstrate how IPA pruning positively affects the playing strength of UCT and NaïveMCTS. Looking at the average scores, NMCTS-RIP achieved a $12.8$ points increase with respect to NaïveMCTS, and UCT-RIP achieved a near $20$ points increase, relative to UCT. IPA pruning in UCT (UCT-RIP) managed to shrink the performance gap between UCT and NaïveMCTS from $30$ points to $10.1$ points, noticeable in Figure \ref{TournamentResultsAllMaps} where UCT-RIP's performance closely matches that of NaïveMCTS in the $8\times8$ map. Moreover, NMCTS-RIP was able to score a higher average than POLightRush, one of the strongest scripts usually outranking NaïveMCTS. Against each agent, both NMCTS-RIP and UCT-RIP obtained significantly higher scores than those of NaïveMCTS and UCT respectively.
 
 As expected, scripts and script-based approaches exhibit a superior performance versus low-level MCTS search approaches, due to the presence of expert knowledge in the form of hard-coded scripts. Expert knowledge helps in avoiding detrimental player-actions by focusing the search on a limited set of player-actions judged more rewarding. However, this comes at the cost of lower decision granularity and higher exploitation risk. By pruning detrimental player-actions, we hope to focus the search on a wider range of interesting player-actions and keep a higher degree of decision granularity. The fact that NMCTS-RIP could achieve a higher average score than MixedBot in the $12\times12$ map signifies that our approach could be promising.
+
+Under the \mRTS{} competition settings, all agents that use MCTS for low-level search would benefit from IPA pruning. Besides holistic agents, those that rely on MCTS for tactical planing (\cite{barriga_combining_2017} and \cite{moraes_action_2018}) would see a tactical performance gain that positively impacts their performance in the competition, because of the greater focus on meaningful player-actions. 
 
 % ===========================================
 
@@ -488,15 +528,18 @@ $32\times32$ & $43$ & $1$ & $56$ & $71$ \\
 \section{Conclusions and Future Work}
 \label{sec:conclusions}
 
-Throughout this paper, we have studied the possibility of employing move pruning as a way to enhance MCTS performance in the context of RTS games. We have identified a class of player-actions that can negatively impact the performance of low-level MCTS approaches. We labeled those actions as Inactive Player-Actions (IPAs) due to their tendency to keep at least one unit in an inactive state. Several pruning approaches were conceived to directly prune IPAs, taking into account the existence of possibly useful IPAs. We then carried out a range of experiments to test the validity of our approaches and discussed the obtained results. According to the results, pruning IPAs is associated with a meaningful performance gain, due to the reduced branching factor and the increased focus on more interesting player-actions. IPA pruning in NaïveMCTS has demonstrated an impressive performance across increasingly larger maps, especially when all excessive IPAs get pruned. Therefore, we conclude that NaïveMCTS can safely ignore all superfluous IPAs in such situations, which will grant a risk-free performance boost.
+Throughout this paper, we have studied the possibility of employing move pruning as a way to enhance MCTS performance in the context of RTS games. We have identified a class of player-actions that can negatively impact the performance of low-level MCTS approaches. We labeled those actions as Inactive Player-Actions (IPAs) due to their tendency to keep at least one unit in an inactive state. Several pruning approaches were conceived to prune IPAs, taking into account the existence of possibly useful IPAs. We then carried out a range of experiments to test the validity of our approaches and discussed the obtained results. According to the results, pruning IPAs is associated with a meaningful performance gain, due to the reduced branching factor and the increased focus on more interesting player-actions. IPA pruning in NaïveMCTS has demonstrated an impressive performance across increasingly larger maps, especially when all excessive IPAs get pruned. Therefore, we conclude that NaïveMCTS can safely ignore all superfluous IPAs in such situations, which will grant a risk-free performance boost.
 
-Move pruning in this context can be seen as "inverse" action abstraction, since we are trying to find the set of player-actions to avoid, whereas, action abstraction methods seek to find the set of player-actions to focus on exclusively. Pruning low-quality player-actions could result in a more flexible and granular decision space, rather than the coarser space induced by action abstractions (scripts).
+Move pruning in this context can be seen as ``inverse" action abstraction, since we are trying to find the set of player-actions to avoid, whereas, action abstraction methods seek to find the set of player-actions to focus on exclusively. Pruning low-quality player-actions could result in a more flexible and granular decision space, rather than the coarser space induced by action abstractions (scripts). 
 
-There are, probably, other types of low-quality player-actions that deserve pruning, such as those involving aimless unit movements. Researching more prunable player-action types falls into the scope of our next work, along with further analysis of IPA pruning in larger scenarios, and the investigation of the impact of IPA pruning in multi-level search approaches such as STT\cite{barriga_combining_2017} and A3N\cite{moraes_action_2018}. Finally, we believe that more research into the low-level structure of the RTS decision space could lead to a deeper understanding of the general features of higher-quality decisions.
+\mRTS{} agents integrating a low-level search technique with IPA pruning could gain an improved tactical reasoning ability. This improvement would positively influence the agent's performance in the \mRTS{} competition.
+
+Researching more prunable player-action types falls into the scope of our next work, along with further analysis of IPA pruning in larger scenarios, and the analysis of the impact of IPA pruning in multi-level search approaches such as STT\cite{barriga_combining_2017} and A3N\cite{moraes_action_2018}. We believe that further research into the low-level structure of the RTS decision space could lead to a deeper understanding of the general features of higher-quality decisions.
 
 %\section*{Acknowledgments}
-
+\squeezeup
 \bibliographystyle{IEEEtranS}
 \bibliography{library}
+
 
 \end{document}
